	 (thanks, Julian Wiseman) (Fred).
20070404 printer.c: don't buffer output so text is available as it is
         printed (Release-0_8_0-branch) (Fred).
20070409 ChangeLog,README,configure.in,man/fuse.1: updates for 0.8 release
	 (Release-0_8_0-branch).
20070409 rzx.c: change over to the 'release' DSA key (Release-0_8_0-branch).
20070409 fuse.c: remove warning (Release-0_8_0-branch).
20070410 rzx.c: don't allow use of rollback commands during playback (thanks,
	 Julian Wiseman) (Release-0_8_0-branch).
20070411 README: these aren't all IDE interfaces (Release-0_8_0-branch).
20070411 fuse.c: update copyright date to 2007 (Release-0_8_0-branch).
20070416 widget/Makefile.am: distribute fuse.font.sbf and mkfusefont.pl
         (Release-0_8_0-branch) (Fred).
20070424 TAG: Release-0_8_0 (Release-0_8_0-branch).
20070425 uidisplay.c,widget/menu.c: initialise border in help screen and
         center keyboard picture on help screen (thanks, Alberto Garcia)
         (Release-0_8_0-branch).
20070425 widget/pokefinder.c: fix up for non-proportional display
	 (thanks, Alberto Garcia) (Release-0_8_0-branch).
20070428 hacking/ui.txt,ui/{uidisplay.h,fb/fbdisplay.c,ggi/ggidisplay.c,
         gtk/gtkdisplay.c,scaler/scaler.c,sdl/sdldisplay.c,
         svga/svgadisplay.c,win32/win32display.c,xlib/xdisplay.c}:
         check that we don't exceed maximum fullscreen dimensions with
         SDL UI and attempt a more graceful failure if things go wrong
         (fixes bug #1708636; thanks Alberto Garcia) (Release-0_8_0-branch)
         (Fred).
20070501 screenshot.c: include limits.h for PATH_MAX (Release-0_8_0-branch)
         (Fred).
20070501 ui/scaler/scalers.c: make sure MIN and ABS are defined
         (Release-0_8_0-branch) (Fred).
20070503 periph.c,spectrum.[ch],ula.[ch],machines/{pentagon.c,scorpion.c,
	 spec128.c,spec16.c,spec48.c}: fix IN timings and consequent fixes
	 to floating bus behaviour (fixes bug #1708597) (thanks, Pegaz and
	 Mark Woodmass) (Release-0_8_0-branch).